fix scrollbar button displays

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,4 +6,5 @@
 	align-items: center;
 	padding-top: 40px;
 	height: fit-content;
+	padding-bottom: 40px;
 }
