--- a/app/assets/stylesheets/scrollbar.scss
+++ b/app/assets/stylesheets/scrollbar.scss
@@ -1,5 +1,12 @@
 @import "./variables.scss";
 
+#scrollbar-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
 
 .scrollbar-ul {
 	width: 67vw;
@@ -7,14 +14,11 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin-left: -9px;
-	margin-right: -9px;
 	white-space: nowrap;
 	overflow-x: scroll;
-	transition: 2s ease-in;
+	transition: scroll 2s ease-in-out;
 	scroll-behavior: smooth;
 }
-
 
 .scrollbar-li {
 	margin: 5px;
@@ -159,11 +163,6 @@ scrollbar-li:hover {
 	background-color: red;
 }
 
-
-// #red-star {
-// 	background-color: #DA3743;
-// }
-
 %scroll-button {
 	width: 40px;
 	height: 40px;
@@ -171,30 +170,30 @@ scrollbar-li:hover {
 	background-color: white;
 	border: 1px solid rgba(148, 147, 147, 0.639);
 	box-shadow: 0 0 5px silver;
-	background-image: image-url('arrow-icon');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 13px;
-	// position: absolute;
 	z-index: 2;
+	position: absolute;
 }
 
 .left-scroll-button {
 	@extend %scroll-button;
-	// transform: rotate(90deg);
-	// margin-right: -100px;
+	left: 0;
 	overflow: 50;
+	margin-left: -20px;
+}
+
+.right-scroll-button {
+	@extend %scroll-button;
+	right: 0;
+	margin-right: -25px;
 }
 
 .left-scroll-button:hover, .right-scroll-button:hover {
 	cursor: pointer;
 	border: solid 2px red
 }
-
-.right-scroll-button {
-	@extend %scroll-button
-}
-
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 
